--- a/SiteEstudoDotNetFramework/packages.config
+++ b/SiteEstudoDotNetFramework/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.pt-br" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
@@ -50,9 +51,15 @@
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Http.Headers" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.1.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
